--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,11 +10,15 @@
     
     <uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-  <uses-feature android:name="android.hardware.location" android:required="true" />
-  <uses-feature android:name="android.hardware.location.gps" android:required="false" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-feature android:name="android.hardware.location" android:required="true" />
+    <uses-feature android:name="android.hardware.location.gps" android:required="false" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
     <application
         android:allowBackup="true"
@@ -62,6 +66,12 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" >
         </activity>
+        <activity
+            android:name=".BattleModeActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
         
         <service android:name="com.littlefluffytoys.littlefluffylocationlibrary.LocationBroadcastService" />
 	    <receiver android:name="com.littlefluffytoys.littlefluffylocationlibrary.StartupBroadcastReceiver" android:exported="true">
@@ -78,7 +88,8 @@
             </intent-filter>
         </receiver>
 	    
-	    <meta-data android:name="com.google.android.gms.version" android:value="17"/>
+	    <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+	    <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyA0DaIp_OWVAwhNxJwYLFDn3ABMDn5m8Wk"/>
     </application>
 
 </manifest>
